# service-manager-desktop

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: .service_config.json  .service_pids.json  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config_manager.rs  lib.rs  main.rs  service_config.rs  service_manager.rs  wechat_api.rs
src/api/: tauri.ts
src/components/: LogConsole.tsx  MainToolbar.tsx  ServiceConfig.tsx  ServiceEditDialog.tsx  ServiceLogDrawer.tsx  ServiceSidebar.tsx  WeChatBotControls.tsx
