[package]
name = "service-manager-desktop"
version = "1.2.0"
description = "服务管理器 - Tauri 桌面应用"
authors = []
edition = "2021"

[lib]
name = "service_manager_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
open = "5"
chrono = "0.4"
libc = "0.2"
